search icon added on mobile and landing page desktop and mobile bug fixed

--- a/src/components/Logo/LinkedLogo.module.css
+++ b/src/components/Logo/LinkedLogo.module.css
@@ -42,7 +42,7 @@
   }
   @media(max-width:767px){
     margin:0;
-    width:160px;
+    width:140px;
   }
 }
 .authenticatedLogo {
